--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,7 @@ work = "2.9.0"
 robolectric = "4.11.1"
 androidx-compose-ui-test = "1.7.6"
 androidx-test-core = "1.6.1"
+ucrop = "2.2.11"
 
 [libraries]
 androidx-adaptive-layout = { module = "org.jetbrains.compose.material3.adaptive:adaptive-layout", version.ref = "adaptive" }
@@ -87,6 +88,7 @@ androidx-test-core = { module = "androidx.test:core-ktx", version.ref = "android
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 compose-ui-test-junit4 = { module = "org.jetbrains.compose.ui:ui-test-junit4", version.ref = "compose-multiplatform" }
 androidx-compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4-android", version.ref = "androidx-compose-ui-test" }
+ucrop = { module = "com.github.yalantis:ucrop", version.ref = "ucrop" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
